--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<!-- Mybatis代码生成插件 -->
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.4.0</version>
+
+				<!-- 配置文件位置 -->
+				<configuration>
+					<overwrite>true</overwrite>
+					<configurationFile>src/main/resources/generator/generatorConfig.xml</configurationFile>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
