docs: 修改了readme及启动logo

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>*.properties</include>
+					<include>banner.txt</include>
 				</includes>
 			</resource>
 		</resources>
