--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
 				<includes>
 					<include>*.properties</include>
 					<include>banner.txt</include>
+					<include>static/**</include>
 				</includes>
 			</resource>
 		</resources>
